--- a/src/sass/partials/_reset.scss
+++ b/src/sass/partials/_reset.scss
@@ -4,6 +4,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     border: 0;
 }
 
+html, body {
+	width: 100%;
+	height: 100%;
+}
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
